
2010-04-22: CSSlayer <wengxt@gmail.com>
	* 修复overflow，常用字表，无法以词定第二个字，以及一个不保存用户词组的问题

2010-04-22: CSSlayer <wengxt@gmail.com>
	* 调整代码结构, 修改图标文件路径

2010-04-21: CSSlayer <wengxt@gmail.com>
	* createPYMB加入对gbkpy.org的简单错误检测

2010-04-05: CSSlayer <wengxt@gmail.com>
	* 修复自定义双拼配置无效问题

2010-03-24: CSSlayer <wengxt@gmail.com>
	* 感谢提供新托盘图标的zdon (at) forum.ubuntu.org.cn

2010-03-20: CSSlayer <wengxt@gmail.com>
	* 初始化UTF8版本

2010-03-05: Yuking <yuking_net@sohu.com>
	* src/KeyList.c: 修正某些组合键响应不正常的问题

2010-02-12: Yuking <yuking_net@sohu.com>
	* src/ui.c: 修正系统托盘图标显示不正常的问题

2010-02-11: Yuking <yuking_net@sohu.com>
	* src/MainWindow.c, InputWindow.c: 为输入窗和状态窗增加了名字

2010-01-28: Yuking <yuking_net@sohu.com>
	* 修正打开/关闭DBus模式的一些错误

2010-01-18: Yuking <yuking_net@sohu.com>
	* data/cj.txt: 补漏仓颉输入法中的“这”字
	* src/tools.c: 修正配置文件读错误

2009-12-29: Yuking <yuking_net@sohu.com>
	* 修正无法保存用户词组和词频信息的错误

2009-12-19: zxd <zhangxudong AT 163.com>
	* 引入环境变量FCITXDIR，这样用户可以指定从何处读入数据文件

2009-12-10: meoow <meoow AT imp3.net>
	* data/vk.conf: 为虚拟键盘添加日文符号

2009-12-10: Yuking <yuking_net@sohu.com>
	* src/KeyList.c: 修正某些按键处理错误的问题

2009-11-29: Jarryson
	* 修改配置文件的路径，尽量靠近XDG标准

2009-11-03: hurrica...@126.com
	* lib/i18nPtHdr.c, i18nIc.c: 修正两处内存泄露

2009-11-02: Yuking <yuking_net@sohu.com>
	* src/tools.c, xim.c: 用户可以指定记录文件路径了，如果路径为空，则默认为~/.fcitx/record.dat

2009-10-29: Yuking <yuking_net@sohu.com>
	* src/xim.c, tools.c: 增加记录模式（默认热键CTRL_ALT_J)，并增加配置选项
	* src/ime.c: 改进输入法设置模式，可以通过配置文件设置输入法的顺序(如，设置“使用拼音=1”、“使用区位=2”，那么拼音将在区位的前面)

2009-10-25: Yuking <yuking_net@sohu.com>
	* src/py.c: 修正拼音词频信息保存错误问题
	* src/tools.c, main.c: 调整配置文件的读取方法，不再自动在家目录中生成配置文件，而是增加了一个命令行参数（请用fcitx -h查看）

2009-10-21: Yuking <yuking_net@sohu.com>
	* src/xim.c, main.c: 修正与QT4.6特效时的不兼容

2009-10-18: wind (xihe), xihels@gmail.com
        * 添加VIM自动输入模式转换

2009-09-30: ginkgo <ginkgo @ linuxsir>
        * data/vk.conf: 修正中文“〇”的错误

2009-09-29: Yuking <yuking_net@sohu.com>
        * src/tools.c, ime.c: 增加打开/关闭虚拟键盘的热键"CTRL_ALT_K"
